--- a/package.json
+++ b/package.json
@@ -24,13 +24,11 @@
     "react-typed": "^1.2.0"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "npm start",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+    "heroku-postbuild": "npm run build"},
+
   "eslintConfig": {
     "extends": "react-app"
   },
