--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
 {
   "name": "mypro-portfolio",
   "version": "0.1.0",
-  "homepage": "https://alexshanless.github.com/mypro-portfolio",
   "private": true,
-  "engines": {
-    "node": "12.16.2",
-    "npm": "6.14.4"
-  },
   "dependencies": {
-    "@material-ui/core": "^4.10.0",
+    "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.9.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "install": "^0.13.0",
-    "npm": "^6.14.5",
+    "gh-pages": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-particles-js": "^3.2.1",
@@ -24,11 +18,13 @@
     "react-typed": "^1.2.0"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "serve -s build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "heroku-postbuild": "npm run build"},
-
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -44,7 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "gh-pages": "^2.2.0"
-  }
+  "homepage": "https://alexshanless.github.io/mypro-portfolio"
 }
