--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://alexshanless.github.io/mypro-portfolio"
+  "homepage": "devshan.com"
 }
